src/objects/Activity/fields/Action_Code__c.field-meta.xml
<CustomField>
    <fullName>Action_Code__c</fullName>
    <label>Action Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting Call</fullName>
            </value>
            <value>
                <fullName>Accounting Alert</fullName>
            </value>
            <value>
                <fullName>Generate Coating &amp; DT Policy</fullName>
            </value>
            <value>
                <fullName>Generate Customer Worksheet</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>In Call</fullName>
            </value>
            <value>
                <fullName>Notes</fullName>
            </value>
            <value>
                <fullName>Proactive Call</fullName>
            </value>
            <value>
                <fullName>Proactive Email</fullName>
            </value>
            <value>
                <fullName>Generate Purchase Order</fullName>
            </value>
            <value>
                <fullName>Send a letter</fullName>
            </value>
            <value>
                <fullName>Generate standard fax</fullName>
            </value>
            <value>
                <fullName>Generate terms and conditions</fullName>
            </value>
            <value>
                <fullName>Request for Quote</fullName>
            </value>
            <value>
                <fullName>Generate MSDS</fullName>
            </value>
            <value>
                <fullName>Out Call</fullName>
            </value>
            <value>
                <fullName>Request from Saxonburg</fullName>
            </value>
            <value>
                <fullName>Customer Visit</fullName>
            </value>
            <value>
                <fullName>Exhibition Visit</fullName>
            </value>
            <value>
                <fullName>Promotional Items Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>