src/objects/Activity/fields/BU_Review__c.field-meta.xml
<CustomField>
    <fullName>BU_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activity selected for business unit review.</description>
    <inlineHelpText>Select this checkbox to move this activity onto the business unit review activity report.</inlineHelpText>
    <label>BU Review</label>
    <type>Checkbox</type>
</CustomField>