src/objects/Activity/fields/Est_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Est_Completion_Date__c</fullName>
    <label>Est Completion Date</label>
    <type>Date</type>
</CustomField>