src/objects/Activity/fields/Event_Salesforce_Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Salesforce_Legacy_Id__c</fullName>
    <externalId>true</externalId>
    <label>Event Salesforce Legacy Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>