src/objects/Activity/fields/Executive_Summary__c.field-meta.xml
<CustomField>
    <fullName>Executive_Summary__c</fullName>
    <inlineHelpText>255 Characters - Included on Account Review</inlineHelpText>
    <label>Executive Summary</label>
    <type>TextArea</type>
</CustomField>