src/objects/Activity/fields/Major_Activity__c.field-meta.xml
<CustomField>
    <fullName>Major_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes if activity should be included in Account Review report</description>
    <inlineHelpText>Activity will be included on Account Review</inlineHelpText>
    <label>Major Activity</label>
    <type>Checkbox</type>
</CustomField>