src/objects/Activity/fields/Meeting_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Attendees__c</fullName>
    <label>Meeting Attendees</label>
    <type>TextArea</type>
</CustomField>