src/objects/Activity/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call customer back</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Disposal</fullName>
            </value>
            <value>
                <fullName>Expedite</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Literature</fullName>
            </value>
            <value>
                <fullName>Lost Order Price</fullName>
            </value>
            <value>
                <fullName>Lost Order Specs</fullName>
            </value>
            <value>
                <fullName>Lost Order No Stock</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Rework</fullName>
            </value>
            <value>
                <fullName>Request for quote</fullName>
            </value>
            <value>
                <fullName>Sent quote</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Trip report</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Check-in</fullName>
            </value>
            <value>
                <fullName>Voice mail left</fullName>
            </value>
            <value>
                <fullName>Left message</fullName>
            </value>
            <value>
                <fullName>No Message Left</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Rings Busy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>