src/objects/Activity/fields/Support_Required__c.field-meta.xml
<CustomField>
    <fullName>Support_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Support Required</label>
    <type>Checkbox</type>
</CustomField>