src/objects/Activity/fields/Task_Salesforce_Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>Task_Salesforce_Legacy_Id__c</fullName>
    <externalId>true</externalId>
    <label>Task Salesforce Legacy Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>