src/objects/Activity/fields/Trip_Report_Action_Legacy_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Trip_Report_Action_Legacy_Record_ID__c</fullName>
    <externalId>true</externalId>
    <label>Trip Report Action Legacy Record ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>